--- a/dev/assets/css/app.css
+++ b/dev/assets/css/app.css
@@ -1384,7 +1384,7 @@ body {
   font-size: 16px;
   line-height: 1.428571429;
   color: #333333;
-  background-color: #fff;
+  background-color: #f1f1f1;
 }
 
 input,
@@ -1433,7 +1433,7 @@ img {
 .img-thumbnail {
   padding: 4px;
   line-height: 1.428571429;
-  background-color: #fff;
+  background-color: #f1f1f1;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -2742,7 +2742,7 @@ th {
 }
 
 .table .table {
-  background-color: #fff;
+  background-color: #f1f1f1;
 }
 
 .table-condensed > thead > tr > th,
@@ -4678,7 +4678,7 @@ tbody.collapse.in {
 
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
   color: #555555;
-  background-color: #fff;
+  background-color: #f1f1f1;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
   cursor: default;
@@ -4761,7 +4761,7 @@ tbody.collapse.in {
   .nav-tabs-justified > .active > a, .nav-tabs.nav-justified > .active > a,
   .nav-tabs-justified > .active > a:hover, .nav-tabs.nav-justified > .active > a:hover,
   .nav-tabs-justified > .active > a:focus, .nav-tabs.nav-justified > .active > a:focus {
-    border-bottom-color: #fff;
+    border-bottom-color: #f1f1f1;
   }
 }
 
@@ -5743,7 +5743,7 @@ a.badge:hover, a.badge:focus {
   padding: 4px;
   margin-bottom: 22px;
   line-height: 1.428571429;
-  background-color: #fff;
+  background-color: #f1f1f1;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: border 0.2s ease-in-out;
