added footer for recycle bin and npm server

--- a/dev/assets/css/app.css
+++ b/dev/assets/css/app.css
@@ -6280,6 +6280,7 @@ button.list-group-item-danger.active:focus {
   margin-bottom: 0;
   font-size: 18px;
   color: inherit;
+  text-transform: uppercase;
 }
 
 .panel-title > a,
@@ -7739,6 +7740,22 @@ button.close {
   }
 }
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
   padding-top: 70px;
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
 }
