--- a/src/bootstrap-sass-3.3.6/assets/stylesheets/bootstrap/_panels.scss
+++ b/src/bootstrap-sass-3.3.6/assets/stylesheets/bootstrap/_panels.scss
@@ -35,6 +35,7 @@
   margin-bottom: 0;
   font-size: ceil(($font-size-base * 1.125));
   color: inherit;
+  text-transform: uppercase;
 
   > a,
   > small,
