--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,19 @@
 @import "../bootstrap-sass-3.3.6/assets/stylesheets/bootstrap";
 
-
+html{
+    position: relative;
+    min-height: 100%;
+}
 body{
     padding-top: 70px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
 }
