--- a/dev/assets/css/app.css
+++ b/dev/assets/css/app.css
@@ -6244,11 +6244,9 @@ button.list-group-item-danger.active:focus {
 
 .panel {
   margin-bottom: 22px;
-  background-color: #fff;
+  background-color: #F6F8FA;
   border: 1px solid transparent;
   border-radius: 4px;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 
 .panel-body {
@@ -6527,26 +6525,26 @@ button.list-group-item-danger.active:focus {
 }
 
 .panel-default {
-  border-color: #ddd;
+  border-color: #dcdcdc;
 }
 
 .panel-default > .panel-heading {
   color: #333333;
-  background-color: #f5f5f5;
-  border-color: #ddd;
+  background-color: #F6F8FA;
+  border-color: #dcdcdc;
 }
 
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #ddd;
+  border-top-color: #dcdcdc;
 }
 
 .panel-default > .panel-heading .badge {
-  color: #f5f5f5;
+  color: #F6F8FA;
   background-color: #333333;
 }
 
 .panel-default > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #ddd;
+  border-bottom-color: #dcdcdc;
 }
 
 .panel-primary {
@@ -7740,6 +7738,40 @@ button.close {
   }
 }
 
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://example.com/MaterialIcons-Regular.eot);
+  /* For IE6-8 */
+  src: local("Material Icons"), local("MaterialIcons-Regular"), url(https://example.com/MaterialIcons-Regular.woff2) format("woff2"), url(https://example.com/MaterialIcons-Regular.woff) format("woff"), url(https://example.com/MaterialIcons-Regular.ttf) format("truetype");
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  /* Preferred icon size */
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+
 html {
   position: relative;
   min-height: 100%;
@@ -7749,6 +7781,43 @@ body {
   padding-top: 70px;
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+}
+
+.cards {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.cards .card {
+  background-color: #fff;
+  padding: 10px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  margin: 0 0 10px 0;
+  position: relative;
+}
+
+.cards .card:hover .actions a {
+  color: #a3a3a3;
+}
+
+.cards .actions {
+  margin: 0;
+  list-style-type: none;
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+}
+
+.cards .actions a {
+  color: #e4e4e4;
+}
+
+.cards .actions .material-icons {
+  font-size: 1em;
 }
 
 .footer {
