--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,44 @@
 @import "../bootstrap-sass-3.3.6/assets/stylesheets/bootstrap";
 
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+       local('MaterialIcons-Regular'),
+       url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
+       url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
+       url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+
 html{
     position: relative;
     min-height: 100%;
@@ -8,6 +47,41 @@ body{
     padding-top: 70px;
     /* Margin bottom by footer height */
     margin-bottom: 60px;
+}
+
+.cards{
+    list-style-type: none;
+    margin:0;
+    padding:0;
+    .card{
+        background-color:#fff;
+        padding:10px;
+        @include box-shadow(0 1px 1px rgba(0,0,0,.05));
+        margin:0 0 10px 0;
+        position:relative;
+        &:hover{
+            .actions{
+                a{
+                    color: #a3a3a3;    
+                }
+            }
+        }
+    }
+    .actions{
+        margin:0;
+        list-style-type: none;
+        padding:0;
+        position:absolute;
+        top:50%;
+        right:20px;
+        transform: translateY(-50%);
+        a{
+            color: #e4e4e4;            
+        }
+        .material-icons{
+            font-size: 1em;
+        }
+    }
 }
 .footer {
   position: absolute;
