--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -93,6 +93,11 @@ body{
 }
 
 
+/** THE 3 MAJOR PANELS **/
+.add-story{
+  color: #fff;
+}
+
 
 /**
  * For the correct positioning of the placeholder element, the dnd-list and
