--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -53,7 +53,7 @@ body{
     list-style-type: none;
     margin:0;
     padding:0;
-    .card{
+    & > .card{
         background-color:#fff;
         padding:10px;
         @include box-shadow(0 1px 1px rgba(0,0,0,.05));
@@ -75,6 +75,10 @@ body{
         top:50%;
         right:20px;
         transform: translateY(-50%);
+        li{
+          float: left;
+          padding:0;
+        }
         a{
             color: #e4e4e4;            
         }
@@ -145,9 +149,7 @@ body{
  * half of the element we are dragging over. In other
  * browsers we can use event.offsetY for this.
  */
-.simpleDemo ul[dnd-list] li {
-
-
+.simpleDemo ul[dnd-list] > li {
     display: block;
     padding: 10px 15px;
 
