--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,16 +1,16 @@
 @import "../bootstrap-sass-3.3.6/assets/stylesheets/bootstrap";
 
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
-  src: local('Material Icons'),
-       local('MaterialIcons-Regular'),
-       url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
-       url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
-       url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
-}
+// @font-face {
+//   font-family: 'Material Icons';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+//   src: local('Material Icons'),
+//        local('MaterialIcons-Regular'),
+//        url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
+//        url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
+//        url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+// }
 
 .material-icons {
   font-family: 'Material Icons';
@@ -88,11 +88,11 @@ body{
     }
 }
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
+  // height: 60px;
   background-color: #f5f5f5;
 }
 
