--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -175,4 +175,12 @@ body{
   -webkit-border-top-left-radius: 20px;
   -moz-border-radius-topleft: 20px;
   border-top-left-radius: 20px;
+  .toggle-button{
+    display: block;
+    width: 40px;
+    height: 40px;
+    -webkit-border-top-left-radius: 20px;
+    -moz-border-radius-topleft: 20px;
+    border-top-left-radius: 20px;
+  }
 }
