--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,16 +1,16 @@
 @import "../bootstrap-sass-3.3.6/assets/stylesheets/bootstrap";
 
-// @font-face {
-//   font-family: 'Material Icons';
-//   font-style: normal;
-//   font-weight: 400;
-//   src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
-//   src: local('Material Icons'),
-//        local('MaterialIcons-Regular'),
-//        url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
-//        url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
-//        url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
-// }
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+       local('MaterialIcons-Regular'),
+       url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
+       url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
+       url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+}
 
 .material-icons {
   font-family: 'Material Icons';
@@ -48,7 +48,9 @@ body{
     /* Margin bottom by footer height */
     margin-bottom: 60px;
 }
-
+.search-block{
+  margin-bottom: 20px;
+}
 .cards{
     list-style-type: none;
     margin:0;
@@ -80,7 +82,9 @@ body{
           padding:0;
         }
         a{
-            color: #e4e4e4;            
+            color: #e4e4e4;
+            display: inline-block;
+            margin-left:5px;
         }
         .material-icons{
             font-size: 1em;
