--- a/dev/assets/css/app.css
+++ b/dev/assets/css/app.css
@@ -7756,6 +7756,15 @@ button.close {
   }
 }
 
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://example.com/MaterialIcons-Regular.eot);
+  /* For IE6-8 */
+  src: local("Material Icons"), local("MaterialIcons-Regular"), url(https://example.com/MaterialIcons-Regular.woff2) format("woff2"), url(https://example.com/MaterialIcons-Regular.woff) format("woff"), url(https://example.com/MaterialIcons-Regular.ttf) format("truetype");
+}
+
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
@@ -7790,6 +7799,10 @@ body {
   padding-top: 70px;
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+}
+
+.search-block {
+  margin-bottom: 20px;
 }
 
 .cards {
@@ -7828,6 +7841,8 @@ body {
 
 .cards .actions a {
   color: #e4e4e4;
+  display: inline-block;
+  margin-left: 5px;
 }
 
 .cards .actions .material-icons {
