--- a/dev/assets/css/app.css
+++ b/dev/assets/css/app.css
@@ -7805,6 +7805,20 @@ body {
   margin-bottom: 20px;
 }
 
+.trash-list {
+  margin: 0 0 20px 0;
+  padding: 0;
+}
+
+.trash-list li {
+  display: inline-block;
+  list-style-type: none;
+  padding: 0 5px;
+  background-color: #e6e6e6;
+  margin-right: 5px;
+  border-radius: 10px;
+}
+
 .cards {
   list-style-type: none;
   margin: 0;
