putback and permanently delete feature

--- a/dev/assets/css/app.css
+++ b/dev/assets/css/app.css
@@ -7871,6 +7871,12 @@ body {
   background-color: #f5f5f5;
 }
 
+.footer .cards .card {
+  width: 33.33%;
+  float: left;
+  margin-right: 15px;
+}
+
 /** THE 3 MAJOR PANELS **/
 .add-story {
   color: #fff;
