--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -181,7 +181,7 @@ body{
  */
 .simpleDemo ul[dnd-list] > li {
     display: block;
-    padding: 10px 15px;
+    padding: 10px 70px 10px 15px;
 
 }
 
