--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -97,7 +97,15 @@ body{
             z-index: 99999;
             position:absolute;
             top:0;
+            padding:20px 10px 20px;
+            background-color: rgba(0, 0, 0, 0.3);
             // display: none;
+            .colorpicker-toggle{
+              position:absolute;
+              right: 5px;
+              top:5px;
+              color: #fff;
+            }
           }
         }
         a{
