--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -47,6 +47,7 @@ body{
     padding-top: 70px;
     /* Margin bottom by footer height */
     margin-bottom: 60px;
+    min-width: 640px;
 }
 .search-block{
   margin-bottom: 20px;
