added intro.js and fixed minification issue on prod

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,5 @@
 @import "../bootstrap-sass-3.3.6/assets/stylesheets/bootstrap";
-
+@import "introjs";
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
