--- a/dev/assets/css/app.css
+++ b/dev/assets/css/app.css
@@ -8336,6 +8336,7 @@ body {
   float: left;
   padding: 0;
   position: relative;
+  z-index: 0;
 }
 
 .cards .actions li .colorpickbox {
@@ -8390,6 +8391,7 @@ body {
 .simpleDemo ul[dnd-list],
 .simpleDemo ul[dnd-list] > li {
   position: relative;
+  z-index: 0;
 }
 
 /**
