--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -94,6 +94,7 @@ body{
           float: left;
           padding:0;
           position: relative;
+          z-index: 0;
           .colorpickbox{
             z-index: 99999;
             position:absolute;
@@ -150,6 +151,7 @@ body{
 .simpleDemo ul[dnd-list],
 .simpleDemo ul[dnd-list] > li {
   position: relative;
+  z-index: 0;
 }
 
 /**
