--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -49,6 +49,12 @@ body{
     margin-bottom: 60px;
     min-width: 640px;
 }
+.main-container{
+  @media (min-width: $screen-sm-min) {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
 .search-block{
   margin-bottom: 20px;
 }
@@ -99,6 +105,7 @@ body{
             z-index: 99999;
             position:absolute;
             top:0;
+            left: -10px;
             padding:20px 10px 20px;
             background-color: rgba(0, 0, 0, 0.3);
             // display: none;
@@ -145,13 +152,13 @@ body{
 
 
 /**
- * For the correct positioning of the placeholder element, the dnd-list and
+ * For the correct positioning of the placeholder element, the dnd-list and`
  * it's children must have position: relative
  */
 .simpleDemo ul[dnd-list],
 .simpleDemo ul[dnd-list] > li {
-  position: relative;
-  z-index: 0;
+  // position: relative;
+  // z-index: 0;
 }
 
 /**
