--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -130,14 +130,14 @@ body{
 .footer {
   position: fixed;
   bottom: 0;
+  height: 57px;
   width: 100%;
-
   /* Set the fixed height of the footer here */
   // height: 60px;
   background-color: #f5f5f5;
   .hd{
     background-color:lighten($brand-primary, 60%);
-    margin:0;
+    margin:0 0 20px 0;
     padding:15px 20px;
     .material-icons{
       position:relative;
@@ -151,6 +151,11 @@ body{
       margin-right: 15px;
       padding-right: 70px;
     }
+  }
+  &.expanded{
+    height: 300px;
+    overflow-y: scroll;
+    background-color:#fbfbfb;
   }
 }
 
